# huyes-devlog

./: .gitignore  DIRECTIVE_FROM_BRAIN.md  DIVISION_OF_LABOR.md  PI_CONNECTION.md  SURPRISE_PROPOSAL.md  SURPRISE_PROPOSAL_2.md  SURPRISE_PROPOSAL_4.md  SURPRISE_PROPOSAL_5.md  SURPRISE_PROPOSAL_6.md  agtron_analysis.py  agtron_calibration.json  agtron_fast.py  agtron_roi.json  cylinder_mask.json  db_std.qsdb  export_fastsam_onnx.py  export_report.py  fast_seg_agtron.py  fastsam_hailo.py  fov_uniformity_test.py  freshness_index.py  freshness_labeled.py  grind_analysis.py  hailo_status.json  health_server.py  mold_analysis.py  mold_analysis_51.py  mold_detection.py  mold_experiment.py  mold_final.py  mold_insitu.py  mold_intrabean.py  run_pipeline.sh  seg_daemon.py  segment_51beans.py  segment_beans.py  segment_beans_sam.py  spec_viz.py  update_cylinder_mask.py  uv_mold_scan.py  (+7 more)
.claude/: settings.local.json
docs/: README.md  SBIR_申請書草稿.md  _sidebar.md  agtron.md  green_bean_gate_collection_spec.md  index.html  mold.md  progress.md  roadmap.md  vnir_calibration_phase1.md  vnir_phase1_gate_report.md  vnir_phase1_gate_status.md
docs/int8_comparison/: README.md
docs/planA_fastgray/: README.md
docs/proposals/: 03_Roast_Copilot.md  05_光譜溯源護照.md  06_手機遠端採集指揮台.md  07_Hailo_INT8_BBOX精度修復.md  08_瑕疵豆多分類升級.md  09_YOLOX_計數追蹤升級.md  10_光譜豆子配對.md  11_計數系統產品化.md  12_雲端看板實作計劃.md  13_計數整合手機指揮台.md  14_定量分裝技術架構評估.md  15_VNIR密度修正分段計劃.md  README.md
docs/yolox_deployment/: README.md
hailo-compile/: Dockerfile  compile_fastsam.py  compile_fastsam_v2.py  compile_fastsam_v3.py  compile_fastsam_v4.py  fastsam_s.alls
huyes-app/: start_server.sh
huyes-app/backend/: agent_receiver.py  database.py  main.py
huyes-app/frontend/: package-lock.json  package.json  vite.config.ts
huyes-app/pi5_client/: config.json  huyes_client.py  post_analysis.py
multispectral_demo/: CMakeLists.txt  build.sh  cam_diag.sh  camera_prime  camera_prime.c  capture_one.cpp  capture_v4l2  capture_v4l2.c  main.cpp  qs_to_png.cpp  run.sh  spec_fingerprint.cpp  spec_gate.cpp  uvc_fix.c  uvc_fix.map
siamese/: dataset.py  evaluate.py  model.py  train.py
siamese/scripts/: convert_spec_raw.py  export_dataset.py  gen_dummy_data.py
spectral_capture/: Huyes採集.desktop  capture_images.py  capture_pipeline.py  config.py  control_server.py  launch_ui.sh  main.py  preview_display.py  start_capture.sh
spectral_capture/capture/: CAMERA_FPS_NOTES.md  Makefile  fast_gray.h  fast_gray_selftest.cpp  preview_daemon.cpp  qs_daemon.cpp  qs_file_processor.cpp  qs_to_bands.cpp
spectral_capture/pipeline/: band_extract.py  bean_detector.py  bean_tracker.py  fastsam_bean_detector.py  frame_reader.py  qab_parser.py  yolo_bean_detector.py
spectral_capture/spectral/: __init__.py  band_extract.py  calib_logger.py
spectral_capture/storage/: collector.py
spectral_capture/tests/: fixtures_detect_stream_8cm.jsonl  test_band_extract.py  test_bean_detector.py  test_bean_tracker.py  test_bean_tracker_replay.py  test_calib_logger.py  test_control_server.py  test_frame_reader.py  test_preview_display_batch.py  test_qab_parser.py
tests/: test_mold_analysis.py  test_uv_mold_scan.py
(+38 files in other folders)
